[gd_scene load_steps=3 format=3 uid="uid://wfovgqfhltfq"]

[ext_resource type="Script" uid="uid://bx8y41nfeh6og" path="res://scripts/oxygenator.gd" id="1_05wnr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_05wnr"]
radius = 278.25888

[node name="Oxygenator" type="ColorRect"]
offset_left = -156.0
offset_top = -152.0
offset_right = 162.9997
offset_bottom = 131.22156
pivot_offset = Vector2(155.72, 153.015)
color = Color(0.18359, 0.18359, 0.18359, 1)
script = ExtResource("1_05wnr")

[node name="ProgressBar" type="HSlider" parent="."]
layout_mode = 0
offset_left = 40.268497
offset_top = 138.25513
offset_right = 280.537
offset_bottom = 175.83905
max_value = 10.0
step = 0.1
value = 1.0
ticks_position = 2

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 318.12085
offset_bottom = 67.1142
theme_override_font_sizes/normal_font_size = 42
text = "OXYGENATOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 61.745014
offset_top = 197.31554
offset_right = 173.15445
offset_bottom = 233.55724
text = "OVERRIDE"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 108.72485
offset_top = 102.01349
offset_right = 191.94635
offset_bottom = 138.25513
color = Color(0.029506557, 0.029506557, 0.029506557, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_right = 84.56378
offset_bottom = 37.583923
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 102.0
offset_right = 284.2215
offset_bottom = 138.24164
color = Color(0.029506557, 0.029506557, 0.029506557, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect3"]
layout_mode = 0
offset_right = 84.56378
offset_bottom = 37.583923
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 102.0
offset_right = 100.2215
offset_bottom = 138.24164
color = Color(0.029506557, 0.029506557, 0.029506557, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect4"]
layout_mode = 0
offset_right = 84.56378
offset_bottom = 37.583923
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 115.0
offset_top = 79.0
offset_right = 195.53693
offset_bottom = 119.0
text = "OXYGEN"

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 79.0
offset_right = 103.53693
offset_bottom = 119.0
text = "OUTPUT"

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 79.0
offset_right = 295.0
offset_bottom = 119.0
text = "EFFICIENCY"

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 194.63092
offset_top = 194.63097
offset_right = 234.63092
offset_bottom = 234.63097
color = Color(0.29586652, 0.2958665, 0.2958665, 1)

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 40.268497
offset_top = 157.04707
offset_right = 80.26849
offset_bottom = 197.04707
text = "0"

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 265.77188
offset_top = 162.4162
offset_right = 305.77188
offset_bottom = 202.4162
text = "10"

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(155, 175)
shape = SubResource("CircleShape2D_05wnr")

[node name="ZoomPoint" type="Node2D" parent="."]
position = Vector2(156, 153)

[node name="ColorRect5" type="ColorRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
